<resources>
    <string name="app_name">BlockCells</string>
    <string name="telaConfiguracao">BlockCells [Configuração]</string>
    <string name="telaConfigGeral">BlockCells [Config.Geral]</string>
    <string name="telaKilometragem">BlockCells [KM]</string>
    <string name="telaHorario">BlockCells [Privacidade]</string>
    <string name="telaMensagem">BlockCells [Mensagem]</string>
    <string name="telaContatos">BlockCells [Exceção]</string>
    <string name="telaLogGeral">BlockCells [Log]</string>
    <string name="telaListaJustificativa">Justificativas</string>
    <string name="telaJustificativa">BlockCells [Justificativa]</string>
    <string name="btnTravar">Travar</string>
    <string name="btnDestravar">Destravar</string>
    <string name="msgAlertaTrava">Tem certeza que quer destravar? Essa ação será MONITORADA e funcionará apenas na próxima ligação!</string>
    <string name="alertYes">Sim</string>
    <string name="alertNo">Não</string>
    <string name="ConfigGeral_PermiteControle">Permite Controle Remoto?</string>
    <string name="ConfigGeral_InformaLocalizacao">Permite Informar Localização?</string>
    <string name="ConfigGeral_AplicativoAtivado">Aplicativo Ativado?</string>
    <string name="ConfigGeral_EnviaSMS">Envia SMS ao Bloquear?</string>
    <string name="clicouMenu">Foi clicado no menu...</string>
    <string name="configGeral">Configurações</string>
    <string name="configRetorno">Mensagem de Retorno</string>
    <string name="configKm">Kilometragem</string>
    <string name="configHorario">Horário e Dias</string>
    <string name="configContatos">Contatos VIP</string>
    <string name="configLog">Log de ações</string>
    <string name="configJustificativa">Justificativas</string>
    <string name="configControle">Controle Remoto</string>
    <string name="configWelcome">Abertura</string>
    <string name="kmMinino">Velocidade mínima KM/H</string>
    <string name="velocidade_max">Velocidade máxima p/ controle</string>
    <string name="velocidade_alerta">Velocidade para alerta</string>
    <string name="kmBip">Emitir bip ao exceder velocidade?</string>
    <string name="kmExcesso">Enviar alerta de excesso para o controle?</string>
    <string name="title_activity_act_principal">Principal</string>
    <string name="navigation_drawer_open">Abrir aba de navegação</string>
    <string name="navigation_drawer_close">Fechar aba de navegação</string>
    <string name="navigation_drawer_divisor">Opcional</string>
    <string name="action_settings">Configurações</string>
    <string name="action_salvar">Salvo</string>
    <string name="action_sair">Saindo sem salvar</string>
    <string name="lblMensagemRetorno">Mensagem</string>
    <string name="txtMensagemRetorno">Informe a mensagem de retorno</string>
    <string name="lblMensagemRetornoVIP">Mensagem-Contatos de Exceção</string>
    <string name="txtMensagemRetornoVIP">Informe a mensagem de retorno para os contatos de exceção</string>
    <string name="chkLocalizacao">Envia Localização</string>
    <string name="txtOrientaLocaliza">Será enviado um SMS adicional com o link</string>
    <string name="lblControle">Solicitação de Controle Remoto</string>
    <string name="lblInfoControle">A pessoa abaixo está solicitando controle remoto ao seu dispositivo:</string>
    <string name="lblAvisoControle">Se você aceitar o controle todas as funcionalidades só poderão ser alteradas remotamente pelo controlador</string>
    <string name="lblBtnControle">Aceitar Controle</string>
    <string name="lblDiasUteis">Dias úteis</string>
    <string name="lblWeekends">Finais de semana</string>
    <string name="lblMonday">Segunda</string>
    <string name="lblTuesday">Terça</string>
    <string name="lblWedsneday">Quarta</string>
    <string name="lblThursday">Quinta</string>
    <string name="lblFriday">Sexta</string>
    <string name="lblSaturday">Sábado</string>
    <string name="lblSunday">Domingo</string>
    <string name="lblHourFrom">Horário de</string>
    <string name="lblTo">Até</string>
    <string name="lblItemJustificar">Item à Justificar</string>
    <string name="lblDataHora">Data/Hora</string>
    <string name="lblEvento">Evento</string>
    <string name="lblJustificativa">Justificativa</string>
    <string name="descTitleTimePicker">Selecione a Hora</string>
    <string name="alertContacts">São permitidos apenas 3 (três) contatos de exceção!</string>
    <string name="msgBlockCall">Bloqueio de Ligação</string>
    <string name="msgBlockCallNumber">Número: </string>
    <string name="msgDefaultSMS">Em trânsito, celular é bloqueado app Blockcells, ao parar retornarei!</string>
    <string name="msgDefaultSMSVIP">Celular bloqueado (Blockcells) se URGENTE ligue novamente retornarei!</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">PRÓXIMO</string>
    <string name="skip">SAIR</string>
    <string name="start">ENTRAR</string>
    <string name="textSlider1">Este menu deve ser utilizado para configurar o aplicativo, preencha o máximo de informações</string>
    <string name="textSlider2">Aqui informa a velocidade que você está quando em movimento</string>
    <string name="textSlider3">Aqui você insere os contatos</string>
    <string name="title_permitir_remoto">Permissão de controle remoto</string>
    <string name="button_permitir">Permitir</string>
    <string name="button_cancelar">Cancelar</string>
    <string name="msg_permitir">está solicitando permissão para acesso remoto</string>
    <string name="fui_progress_dialog_loading" translation_description="Loading text in dialog">Loading…</string>
    <string name="fui_sign_in_default" translation_description="Button text to sign in">Sign in</string>
    <string name="fui_general_error" translation_description="Toast text flashing general error">An error has occurred.</string>
    <string name="fui_idp_name_google">Google</string>
    <string name="fui_idp_name_facebook">Facebook</string>
    <string name="fui_idp_name_twitter">Twitter</string>
    <string name="fui_provider_name_email">Email</string>
    <string name="fui_provider_name_phone">Phone</string>
    <string name="fui_sign_in_with_google" translation_description="Sign in button text">Sign in with Google</string>
    <string name="fui_sign_in_with_facebook" translation_description="Sign in button text">Sign in with Facebook</string>
    <string name="fui_sign_in_with_twitter" translation_description="Sign in button text">Sign in with Twitter</string>
    <string name="fui_sign_in_with_email" translation_description="Sign in button text">Sign in with email</string>
    <string name="fui_sign_in_with_phone" translation_description="Sign in button text">Sign in with phone</string>
    <string name="fui_next_default" translation_description="Button text to continue">Next</string>
    <string name="fui_email_hint" translation_description="Hint in email input field">Email</string>
    <string name="fui_phone_hint" translation_description="Hint for phone input field">Phone number</string>
    <string name="fui_password_hint" translation_description="Hint for password input field">Password</string>
    <string name="fui_required_field" translation_description="Inline error for required field">You can\'t leave this empty.</string>
    <string name="fui_invalid_email_address" translation_description="Inline error for invalid email address">Incorrect email address</string>
    <string name="fui_missing_email_address" translation_description="Inline error for empty email address in input field">Enter your email address to continue</string>
    <string name="fui_progress_dialog_checking_accounts" translation_description="Progress dialog text while checking for existing accounts">Checking for existing accounts…</string>
    <string name="fui_title_register_email" translation_description="Title for signup form">Sign up</string>
    <string name="fui_name_hint" translation_description="Hint for last name input field">First name &amp; surname</string>
    <string name="fui_button_text_save" translation_description="Button text to save input form">Save</string>
    <string name="fui_progress_dialog_signing_up" translation_description="Dialog text while waiting for server's signup response">Signing up…</string>
    <plurals name="fui_error_weak_password" translation_description="Inline error for weak password"> <item quantity="one">Password not strong enough. Use at least %1$d character and a mix of letters and numbers</item> <item quantity="other">Password not strong enough. Use at least %1$d characters and a mix of letters and numbers</item> </plurals>
    <string name="fui_email_account_creation_error" translation_description="Inline error for signup failure">Email account registration unsuccessful</string>
    <string name="fui_error_user_collision" translation_description="Inline error when user signs up using an existing email account">An account already exists with that email address.</string>
    <string name="fui_create_account_preamble_tos_and_pp" translation_description="Text shown when creating an account with both terms of service and privacy policy.">By tapping %1$s you are indicating that you agree to the %2$s and the %3$s.</string>
    <string name="fui_create_account_preamble_tos_only" translation_description="Text shown when creating an account with only terms of service">By tapping %1$s you are indicating that you agree to the %2$s.</string>
    <string name="fui_create_account_preamble_pp_only" translation_description="Text shown when creating an account with only privacy policy">By tapping %1$s you are indicating that you agree to the %2$s.</string>
    <string name="fui_terms_of_service" translation_description="Link text to web url containing the app's terms of service">Terms of Service</string>
    <string name="fui_privacy_policy" translation_description="Link text to web url containing the app's privacy policy">Privacy Policy</string>
    <string name="fui_welcome_back_idp_header" translation_description="Inline subtitle to users whose signup was interrupted since an existing account was detected">You already have an account</string>
    <string name="fui_welcome_back_email_header" translation_description="Message for returning users">Welcome back!</string>
    <string name="fui_welcome_back_idp_prompt" translation_description="Message to users that need to signin using existing IDP accounts">You\'ve already used %1$s. Sign in with %2$s to continue.</string>
    <string name="fui_welcome_back_password_prompt_body" translation_description="Message to users that need to signin using existing email accounts">You\'ve already used %1$s to sign in. Enter your password for that account.</string>
    <string name="fui_progress_dialog_signing_in" translation_description="Progress dialog text">Signing in…</string>
    <string name="fui_trouble_signing_in" translation_description="Link leading to forgot password flow">Trouble signing in?</string>
    <string name="fui_title_recover_password_activity" translation_description="Recover password screen title">Recover password</string>
    <string name="fui_title_confirm_recover_password" translation_description="Password recovery confirmation message">Check your email</string>
    <string name="fui_password_recovery_body" translation_description="Password recovery message body">Receive instructions to this email that explain how to reset your password.</string>
    <string name="fui_button_text_send" translation_description="Button text to send recovery email">Send</string>
    <string name="fui_confirm_recovery_body" translation_description="Alert dialog displayed after password recovery email is sent">Follow the instructions sent to %1$s to recover your password.</string>
    <string name="fui_progress_dialog_sending" translation_description="Progress dialog while password recovery email is being sent">Sending…</string>
</resources>