<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/backmarcadagua">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingLeft="10dp"
        android:text="@string/lblDiasUteis"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical"
            android:layout_weight="1">

            <CheckBox
                android:id="@+id/horario_monday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/lblMonday" />

            <CheckBox
                android:id="@+id/horario_thursday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/lblThursday" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical"
            android:layout_weight="1">

            <CheckBox
                android:id="@+id/horario_tuesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/lblTuesday" />

            <CheckBox
                android:id="@+id/horario_friday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/lblFriday" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical"
            android:layout_weight="1">

            <CheckBox
                android:id="@+id/horario_wednesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/lblWedsneday" />


        </LinearLayout>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="6dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblHourFrom"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/horario_edtUsefulStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="08:00"
            android:paddingLeft="10dp"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblTo"
            android:paddingLeft="10dp"/>
        <EditText
            android:id="@+id/horario_edtUsefulEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="18:00"
            android:paddingLeft="10dp"
            android:focusable="false"
            android:focusableInTouchMode="false"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingLeft="10dp"
        android:text="@string/lblWeekends"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical"
            android:layout_weight="1">

            <CheckBox
                android:id="@+id/horario_saturday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/lblSaturday" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical"
            android:layout_weight="1">

            <CheckBox
                android:id="@+id/horario_sunday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/lblSunday" />

        </LinearLayout>

        <!-- Linear used for align only -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical"
            android:layout_weight="1">

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="6dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblHourFrom"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/horario_edtWeekendStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="08:00"
            android:paddingLeft="10dp"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblTo"
            android:paddingLeft="10dp"/>
        <EditText
            android:id="@+id/horario_edtWeekendEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="18:00"
            android:paddingLeft="10dp"
            android:focusable="false"
            android:focusableInTouchMode="false"/>
    </LinearLayout>

</LinearLayout>
