<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context="br.com.blockcells.blockcells.ActControle"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:background="@drawable/backmarcadagua">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:text="@string/lblControle"
            android:layout_marginTop="32dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:text="@string/lblInfoControle"
            android:textStyle="normal"
            android:paddingTop="15dp"
            android:textSize="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:text="Anderson Rocha"
            android:layout_marginTop="32dp"
            android:textStyle="bold"
            android:textSize="36dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblAvisoControle"
            android:textStyle="normal"
            android:textSize="16dp"
            android:layout_marginTop="30dp"
            />

        <android.support.v7.widget.AppCompatButton
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/lblBtnControle"
            android:background="@color/colorAccent"
            android:textColor="@color/bg_screen"
            android:textStyle="bold" />

    </LinearLayout>



</LinearLayout>
