<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/backmarcadagua">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="left"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingLeft="6dp"
            android:text="@string/ConfigGeral_PermiteControle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingLeft="6dp"
            android:text="@string/ConfigGeral_InformaLocalizacao" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingLeft="6dp"
            android:text="@string/ConfigGeral_AplicativoAtivado" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingLeft="6dp"
            android:text="@string/ConfigGeral_EnviaSMS" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="right"
        android:orientation="vertical">

        <ToggleButton
            android:id="@+id/configgeral_controleremoto"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:text="ToggleButton"
            android:enabled="false"/>

        <ToggleButton
            android:id="@+id/configgeral_informalocalizacao"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:text="ToggleButton" />

        <ToggleButton
            android:id="@+id/configgeral_aplicativoativado"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:text="ToggleButton" />
        <ToggleButton
            android:id="@+id/configgeral_enviasms"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:text="ToggleButton" />
    </LinearLayout>


</LinearLayout>
